--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,8 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   Exclude:
     - Guardfile
+
+Style/FileName:
+  Exclude:
+    - lib/guard/jekyll-plus.rb
+    - spec/lib/guard/jekyll-plus_spec.rb
